# Smart_hostel_management_system

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  main.cpp  render.yaml
templates/: hostel_management.html
